# terminal_c

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  README.txt  build_and_run.bat  build_artifacts.txt  config.json  development_plan.md  main.cpp  package.json  prepare_chart_resources.bat  pyproject.toml  run_chart.bat  setup_and_build.bat  vcpkg.json
docs/: APP_GUIDELINES.md  ARCHITECTURE.md  OPERATIONS.md  RENDERING.md  RUN_WINDOWS.md  chart.html
examples/: sample_chart.py
include/: candle_manager.h  config.h  data_fetcher.h
mcp/repo-tools/: server.js
mcp/tests/: server.py
ports/webview/: portfile.cmake  vcpkg.json  webviewConfig.cmake
ports/webview/include/webview/: webview.h
resources/: chart.html
scripts/: build_and_run.bat  prepare_chart_resources.bat  run_and_tail.ps1  run_chart.bat  setup_and_build.bat
src/: app.cpp  app.h  app_context.h  candle.cpp  candle_manager.cpp  config.cpp  config_manager.cpp  config_manager.h  config_path.cpp  config_path.h  config_schema.cpp  config_schema.h  config_types.h  data_fetcher.cpp  journal.cpp  journal.h  logger.cpp  logger.h  main.cpp  signal.cpp  signal.h
src/analytics/: ll_intraday.cpp  ll_intraday.h
src/core/: analytics.cpp  analytics.h  backtester.cpp  backtester.h  binary_search.h  candle.h  candle_manager.cpp  candle_manager.h  candle_utils.cpp  candle_utils.h  data_dir.cpp  data_dir.h  data_fetcher.cpp  data_fetcher.h  dx11_context.cpp  dx11_context.h  exchange_utils.cpp  exchange_utils.h  glfw_context.cpp  glfw_context.h  interval_utils.cpp  interval_utils.h  iwebsocket.cpp  iwebsocket.h  kline_stream.cpp  kline_stream.h  logger.cpp  logger.h  path_utils.cpp  path_utils.h  signal_manager.h
src/core/net/: binance_data_provider.cpp  binance_data_provider.h  cpr_http_client.cpp  cpr_http_client.h  fetch_result.h  http_client_cpr.cpp  http_client_cpr.h  hyperliquid_data_provider.cpp  hyperliquid_data_provider.h  i_http_client.h  i_rate_limiter.h  idata_provider.h  ihttp_client.h  irate_limiter.h  token_bucket_rate_limiter.cpp  token_bucket_rate_limiter.h
src/plot/: candlestick.cpp  candlestick.h
src/services/: data_service.cpp  data_service.h  journal_service.cpp  journal_service.h  signal_bot.cpp  signal_bot.h
src/ui/: analytics_window.cpp  analytics_window.h  backtest_window.cpp  backtest_window.h  chart_window.cpp  chart_window.h  control_panel.cpp  control_panel.h  echarts_serializer.cpp  echarts_serializer.h  echarts_window.cpp  echarts_window.h  journal_window.cpp  journal_window.h  signal_entry.h  signals_window.cpp  signals_window.h  tradingview_style.cpp  tradingview_style.h  ui_manager.cpp  ui_manager.h  webview_impl.cpp
tests/: test_backtester.cpp  test_candle_manager.cpp  test_chart_render.cpp  test_config_manager.cpp  test_data_fetcher.cpp  test_echarts_serialization.cpp  test_interval_utils.cpp  test_journal.cpp  test_kline_stream.cpp  test_logger.cpp  test_rsi_boundary.cpp  test_scheduler.cpp  test_signal.cpp  test_ui_manager.cpp
tests/golden/: chart.h
tests/stubs/: imgui_impl_glfw.h  imgui_impl_opengl3.h  webview.h
tests/stubs/GLFW/: glfw3.h
